# shitty-netflix

./: README.md
shitty_netflix/: app.py  forms.py  models.py  pyproject.toml
shitty_netflix/scripts/: fill_db.py
shitty_netflix/static/css/: style.css
shitty_netflix/templates/: about.html  add_movie.html  base.html  index.html  watch_movie.html
shitty_netflix/templates/auth/: login.html  register.html
