[tool.poetry]
name = "shitty-netflix"
version = "0.1.0"
description = ""
authors = ["MattStHilaire"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
werkzeug = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
